# Project_Efim_new

./: .gitignore  .gitignore222  .~lock.Презентация с релизами.pptx#  CodeWars.js  Constants.py  GLOBAL_WINDOW_VALUE.js  Manual_Testing.txt  README.md  __main__.py  celerybeat-schedule.db  converter_html_in_pdf.py  converter_html_in_xlsx.py  converter_html_in_xlsx.xlsx  converter_xlsx_in_html.py  database.py  database.sqlite3  fast_shedul.py  insert_table_experiment.py  insert_value_Company.py  insert_value_table.py  main.py  pyproject.toml  settings.py  tables.py  tables_New_Create.py  tasks.py  tasks.sqlite  test.xlsx  test2.xlsx  test3.xlsx  testPYTON.py  test_excel.py  test_insert_table.py  Презентация с релизами.odp  Презентация с релизами.pptx  шапка.xlsx
Celery/: task.py  test.py
Lesson_alchemy/: ORM.py  alchemy.py  config.py  model_alchemy.py
Lesson_jinja/: Jinjaa.py
Shablon_excel/: шапка.xlsx
api/: BaseFile.py  Company.py  Telegram.py  UserProfile.py  __init__.py  auth.py  js_router.py  main.py  operations.py  searchCompanyINN.py  suggest.py  techTask.py  techTaskForm.py  Сonstruction.py
models/: BaseFile_m.py  Company.py  Telegram.py  UserProfile.py  __init__.py  auth.py  main.py  searchCompanyINN.py  suggest.py  techTask.py  Сonstruction.py
services/: BaseFile_s.py  Company.py  Telegram.py  UserProfile.py  auth.py  main.py  operations.py  reports.py  searchCompanyINN.py  suggest.py  techTask.py  techTaskForm.py  Сonstruction.py
src/auth/: Admin_user.html  create.html  edit.html  index.html
src/autorization/: index.html
src/error/: 404.html
(+76 files in other folders)
