[tool.poetry]
name = "efimov"
version = "0.1.0"
description = ""
authors = ["Harkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
jinja2 = "^3.1.2"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = "^1.10.13"
fastapi = "^0.104.1"
psycopg = "^3.1.13"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
